@@ -1,3 +1,8 @@
+2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* util/grub-mkimage.c (main): Handle special naming of yeeloong
+	directory.
+
 2011-04-08  Colin Watson  <cjwatson@ubuntu.com>
 
 	* docs/grub-dev.texi: Fix spelling of "developer" throughout.
